Replace MetricId enum with class that validates value against swatch-product-config